--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<!-- HTML5 Hello world by kirupa - http://www.kirupa.com/html5/getting_your_feet_wet_html5_pg1.htm -->
-<html lang="en-us">
+/*CSS*/
 
-<head>
-<meta charset="utf-8">
-<title>Hello...</title>
-<style type="text/css">
 #mainContent {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: xx-large;
@@ -38,25 +32,3 @@
 	color: #669900;
 	cursor: pointer;
 }
-
-</style>
-</head>
-
-<body>
-<div id="mainContent">
-<p id="helloText">?</p>
-<button id="clickButton" class="buttonStyle">click me</button>
-</div>
-<script> 
-var myButton = document.getElementById("clickButton");
-var myText = document.getElementById("helloText");
-
-myButton.addEventListener('click', doSomething, false)
-
-function doSomething() {
-	myText.textContent = "hello, world!";
-}
-</script>
-
-</body>
-</html>
